slo-alerting-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencensus-metrics-deployment
  labels:
    app: opencensus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opencensus
  template:
    metadata:
      labels:
        app: opencensus
    spec:
      containers:
      - name: opencensus-server
        image: gcr.io/next-2020-5thnine/opencensus-slis:latest
        ports:
        - containerPort: 8080
